# architecture-as-code

./: .gitattributes  .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: csp-blueprint-deploy.yml  csp-blueprint-devsecops.yml  deploy-reports.yml
Agile-Manifesto/: index.html
ArchiMetal/: index.html
ArchiMetal/54525ee5/elements/: 10164.html  10184.html  10222.html  10223.html  10252.html  (+1316 more)
Archisurance/: index.html
Archisurance/hints/: value_stream.html
COSO/: index.html
COSO/js/: frame.js  model.js
EU-AI-Act/: index.html
GDPR/: index.html
GDPR/elements/: empty-element.html
NIST/: index.html
ORM/: index.html
Oil-Gas/: index.html
Open-Day/: index.html
Open-Day/css/: model.css
Open-Day/js/: imageMapResizer.min.js
SABSA/: index.html
blueprints/CSP/: README.md  README_DEVOPS.md  README_GOVERNANCE.md  README_OPERATION.md  SKILLS.md  application-domain.ts  application-eda-domain.ts  data-governance.ts  devsecops-domain.ts  devsecops-sdlc-architecture.ts  enterprise-architecture.ts  enterprise-eda-architecture.ts  eslint.config.mjs  event-contracts.ts  package-lock.json  package.json  tsconfig.json
diagrams/: Ilograph.yaml  README.md  atam_assessment.html  html_viewer.ipynb  mermaid.ipynb  oil_gas_ai.ipynb  oil_gas_ai_capability_map.html  oil_gas_ai_tech_class_map.html  pyproject.toml  yed.graphml
models/: Agile-Manifesto.archimate  ArchiMetal.archimate  Archisurance.archimate  COSO.archimate  EU-AI-Act.archimate  GDPR.archimate  NIST CSF.archimate  ORM.archimate  Oil-Gas.archimate  OpenDay.archimate  SABSA.archimate
(+3547 files in other folders)
