[project]
name = "architecture-as-code-diagrams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipython>=9.12.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbconvert[webpdf]>=7.17.1",
    "pip>=26.0.1",
    "pypandoc>=1.17",
]
